--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -342,8 +342,8 @@
 				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
 					<div class="m-l-25 m-r--38 m-lr-0-xl">
 						<div class="wrap-table-shopping-cart">
-							<table class="table-shopping-cart table-head" >
-							
+							<table class="table-shopping-cart "  id="table-header">
+					
 								<tr class="table_head table">
 									<th class="column-1">Product</th>
 									<th class="column-2"></th>
