--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 									<div class="size-204 respon6-next">
 										<div class="rs1-select2 bor8 bg0">
-											<select class="js-select2" name="time">
-												<option>Choose an option</option>
+											<select class="js-select2" name="time" id="size">
+												<!-- <option>Choose an option</option> -->
 												<option>Size S</option>
 												<option>Size M</option>
 												<option>Size L</option>
@@ -1650,7 +1650,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									</div>
 
 									<div class="size-204 respon6-next">
-										<div class="rs1-select2 bor8 bg0">
+										Red
+										<!-- <div class="rs1-select2 bor8 bg0">
 											<select class="js-select2" name="time">
 												<option>Choose an option</option>
 												<option>Red</option>
@@ -1659,7 +1660,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 												<option>Grey</option>
 											</select>
 											<div class="dropDownSelect2"></div>
-										</div>
+										</div> -->
 									</div>
 								</div>
 
@@ -1788,8 +1789,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 								<div class="size-204 respon6-next">
 									<div class="rs1-select2 bor8 bg0">
-										<select class="js-select2" name="time">
-											<option>Choose an option</option>
+										<select class="js-select2" name="time" id="size">
+											<!-- <option>Choose an option</option> -->
 											<option>Size S</option>
 											<option>Size M</option>
 											<option>Size L</option>
@@ -1806,7 +1807,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 
 								<div class="size-204 respon6-next">
-									<div class="rs1-select2 bor8 bg0">
+									white
+									<!-- <div class="rs1-select2 bor8 bg0">
+										white
 										<select class="js-select2" name="time">
 											<option>Choose an option</option>
 											<option>Red</option>
@@ -1815,7 +1818,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<option>Grey</option>
 										</select>
 										<div class="dropDownSelect2"></div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 
