fixed product overlay and addtocart needs to be fixed

--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</span>
 	</div>
 
+	<div id="product-overlay"> </div>
 	<!-- Modal1 -->
 	<!--<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
 		<div class="overlay-modal1 js-hide-modal1"></div>
@@ -1559,8 +1560,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!-- Modal 1 --> 
 
 <!-- Modal 2 -->
-	<!-- <div class="wrap-modal2 js-modal2 p-t-60 p-b-20">
-		<div class="overlay-modal2 js-hide-modal2"></div>
+	 <!-- <div class="wrap-modal js-modal2 p-t-60 p-b-20">
+		<div class="overlay-modal js-hide-modal2"></div>
 
 		<div class="container">
 			<div class="bg0 p-t-60 p-b-30 p-lr-15-lg how-pos3-parent">
@@ -1702,7 +1703,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>  -->
 
 <!-- Modal 2 -->
 
@@ -1954,14 +1955,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-	<script>
+	<!--<script>
 		$(".js-select2").each(function(){
 			$(this).select2({
 				minimumResultsForSearch: 20,
 				dropdownParent: $(this).next('.dropDownSelect2')
 			});
 		})
-	</script>
+	</script> -->
 <!-- script for show signin and signup modal -->
 <!--
 <script>
@@ -2001,8 +2002,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!--===============================================================================================-->
 	<script src="vendor/isotope/isotope.pkgd.min.js"></script>
 <!--===============================================================================================-->
-	<!-- <script src="vendor/sweetalert/sweetalert.min.js"></script>
-	<script>
+	 <script src="vendor/sweetalert/sweetalert.min.js"></script>
+	<!--<script>
 		$('.js-addwish-b2').on('click', function(e){
 			e.preventDefault();
 		});
