fixed add to cart

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
 			<div class="row isotope-grid" id='ProductPage'>
 
-				<!-- <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				 <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					
 					<div class="block2">
 						<div class="block2-pic hov-img0">
@@ -762,7 +762,7 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div> 
 <!-- 
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					
@@ -1406,7 +1406,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</span>
 	</div>
 
-	<div id="product-overlay"> </div>
+	<div id="product-overlay"> This is a product overlay </div>
 	<!-- Modal1 -->
 	<!--<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
 		<div class="overlay-modal1 js-hide-modal1"></div>
