--- a/index.html
+++ b/index.html
@@ -1945,6 +1945,218 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 -->
 <!-- signin Modal -->
+<script src="js/product-list.js"></script>
+<script>
+	
+	//Rendering products in main page
+	// $(document).ready( function productsInPage(){
+		let product_disp = document.getElementById('ProductPage');
+		let product_overview = document.getElementById('product-overlay');
+		product_disp.innerHTML = ``;
+		product_overview.innerHTML = ``; 
+		
+		for (let i=0; i<products.length; i++){
+
+		//Listing the available products
+
+			product_disp.innerHTML+=
+			`
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item ${products[i].category}">
+			<!-- Block2 -->
+			<div class="block2">
+				<div class="block2-pic hov-img0">
+					<img src="images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+
+					<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal${i+1}">
+						Quick View
+					</a>
+				</div>
+
+				<div class="block2-txt flex-w flex-t p-t-14">
+					<div class="block2-txt-child1 flex-col-l ">
+						<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+							${products[i].name}
+						</a>
+
+						<span class="stext-105 cl3">
+						&#8377; ${products[i].price}
+						</span>
+					</div>
+
+					<div class="block2-txt-child2 flex-r p-t-3">
+						<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
+							<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
+							<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+			`;
+
+		//Listing the product overview overlay
+
+		product_overview.innerHTML += `
+		
+		<!-- Modal  -->
+	<div class="wrap-modal js-modal${i+1} p-t-60 p-b-20">
+	<div class="overlay-modal js-hide-modal${i+1}"></div>
+
+	<div class="container">
+		<div class="bg0 p-t-60 p-b-30 p-lr-15-lg how-pos3-parent">
+			<button class="how-pos3 hov3 trans-04 js-hide-modal${i+1}">
+				<img src="images/icons/icon-close.png" alt="CLOSE">
+			</button>
+
+			<div class="row">
+				<div class="col-md-6 col-lg-7 p-b-30">
+					<div class="p-l-25 p-r-30 p-lr-0-lg">
+						<div class="wrap-slick3 flex-sb flex-w">
+							<div class="wrap-slick3-dots"></div>
+							<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
+
+							<div class="slick3 gallery-lb">
+								<div class="item-slick3" data-thumb="images/${products[i].tag}.jpg">
+									<div class="wrap-pic-w pos-relative">
+										<img src="images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/${products[i].tag}.jpg">
+											<i class="fa fa-expand"></i>
+										</a>
+									</div>
+								</div>
+
+								<div class="item-slick3" data-thumb="images/${products[i].tag}.jpg">
+									<div class="wrap-pic-w pos-relative">
+										<img src="images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/${products[i].tag}.jpg">
+											<i class="fa fa-expand"></i>
+										</a>
+									</div>
+								</div>
+
+								<div class="item-slick3" data-thumb="images/${products[i].tag}.jpg">
+									<div class="wrap-pic-w pos-relative">
+										<img src="images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/${products[i].tag}.jpg">
+											<i class="fa fa-expand"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-6 col-lg-5 p-b-30">
+					<div class="p-r-50 p-t-5 p-lr-0-lg">
+						<h4 class="mtext-105 cl2 js-name-detail p-b-14">
+						${products[i].name}
+						</h4>
+
+						<span class="mtext-106 cl2">
+						&#8377; ${products[i].price}
+						</span>
+
+						<p class="stext-102 cl3 p-t-23">
+						${products[i].description}
+						</p>
+						
+						<!--  -->
+						<div class="p-t-33">
+							<div class="flex-w flex-r-m p-b-10">
+								<div class="size-203 flex-c-m respon6">
+									Size
+								</div>
+
+								<div class="size-204 respon6-next">
+									<div class="rs1-select2 bor8 bg0">
+										<select class="js-select2" name="time" id="size">
+											<!-- <option>Choose an option</option> -->
+											<option>Size ${products[i].size[0]}</option>
+											<option>Size ${products[i].size[1]}</option>
+											<option>Size ${products[i].size[2]}</option>
+											<option>Size ${products[i].size[3]}</option>
+										</select>
+										<div class="dropDownSelect2"></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="flex-w flex-r-m p-b-10">
+								<div class="size-203 flex-c-m respon6">
+									Color
+								</div>
+
+								<div class="size-204 respon6-next">
+								${products[i].colour}
+
+								</div>
+							</div>
+
+							<div class="flex-w flex-r-m p-b-10">
+								<div class="size-204 flex-w flex-m respon6-next">
+									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
+										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-minus"></i>
+										</div>
+
+										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
+
+										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-plus"></i>
+										</div>
+									</div>
+
+									<button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail add-cart">
+										Add to cart
+									</button>
+								</div>
+							</div>	
+						</div>
+
+						<!--  -->
+						<div class="flex-w flex-m p-l-100 p-t-40 respon7">
+							<div class="flex-m bor9 p-r-10 m-r-11">
+								<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
+									<i class="zmdi zmdi-favorite"></i>
+								</a>
+							</div>
+
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
+								<i class="fa fa-facebook"></i>
+							</a>
+
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
+								<i class="fa fa-twitter"></i>
+							</a>
+
+							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
+								<i class="fa fa-google-plus"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+
+		`;
+
+
+
+		}
+	
+
+
+
+	// });
+
+</script>
 
 <!--===============================================================================================-->	
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
@@ -1954,15 +2166,22 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
+	
+
+
+<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-	<!--<script>
-		$(".js-select2").each(function(){
+	<script>
+
+	$(document).ready(function () {
+			$(".js-select2").each(function(){
 			$(this).select2({
 				minimumResultsForSearch: 20,
 				dropdownParent: $(this).next('.dropDownSelect2')
 			});
-		})
-	</script> -->
+		});
+	});
+	</script> 
 <!-- script for show signin and signup modal -->
 <!--
 <script>
@@ -1983,11 +2202,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!--===============================================================================================-->
 	<script src="vendor/parallax100/parallax100.js"></script>
 	<script>
-        $('.parallax100').parallax100();
+		$(document).ready(function () {
+		$('.parallax100').parallax100();
+		});
 	</script>
 <!--===============================================================================================-->
 	<script src="vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
 	<script>
+		$(document).ready(function () {
 		$('.gallery-lb').each(function() { // the containers for all your galleries
 			$(this).magnificPopup({
 		        delegate: 'a', // the selector for gallery item
@@ -1997,13 +2219,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		        },
 		        mainClass: 'mfp-fade'
 		    });
-		});
+		});});
 	</script>
 <!--===============================================================================================-->
 	<script src="vendor/isotope/isotope.pkgd.min.js"></script>
 <!--===============================================================================================-->
 	 <script src="vendor/sweetalert/sweetalert.min.js"></script>
-	<!--<script>
+	<script>
+		$(document).ready(function () {
+
 		$('.js-addwish-b2').on('click', function(e){
 			e.preventDefault();
 		});
@@ -2027,21 +2251,22 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				$(this).addClass('js-addedwish-detail');
 				$(this).off('click');
 			});
-		}); -->
+		}); 
 
-		<!-- /*---------------------------------------------*/ -->
+		 /*---------------------------------------------*/ 
 
-		<!-- $('.js-addcart-detail').each(function(){
+		 $('.js-addcart-detail').each(function(){
 			var nameProduct = $(this).parent().parent().parent().parent().find('.js-name-detail').html();
 			$(this).on('click', function(){
 				swal(nameProduct, "is added to cart !", "success");
 			});
 		});
-	
-	</script> -->
+		});
+	</script> 
 <!--===============================================================================================-->
 	<script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 	<script>
+		$(document).ready(function () {
 		$('.js-pscroll').each(function(){
 			$(this).css('position','relative');
 			$(this).css('overflow','hidden');
@@ -2054,10 +2279,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			$(window).on('resize', function(){
 				ps.update();
 			})
-		});
+		});});
 	</script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+<script src="js/main.js"></script>	
 
 </body>
 </html>
