added delete item fn

--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -658,6 +658,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		});
 	</script>
 <!--===============================================================================================-->
+	<script src="js/product-list.js"></script>
 	<script src="js/main.js"></script>
 
 </body>
