--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 			<div class="w-full">
 				<div class="header-cart-total w-full p-tb-40">
-					Total: $75.00
+					Total: &#8377;0.00
 				</div>
 
 				<div class="header-cart-buttons flex-w w-full">
