--- a/index.html
+++ b/index.html
@@ -1883,11 +1883,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</p>
 
 				<p class="cd-signin-modal__fieldset">
-					<input type="checkbox" id="remember-me" checked class="cd-signin-modal__input ">
-					<label for="remember-me">Remember me</label>
-				</p>
-
-				<p class="cd-signin-modal__fieldset">
 					<input class="cd-signin-modal__input cd-signin-modal__input--full-width" type="submit" value="Login">
 				</p>
 			</form>
@@ -1917,11 +1912,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</p>
 
 				<p class="cd-signin-modal__fieldset">
-					<input type="checkbox" id="accept-terms" class="cd-signin-modal__input ">
-					<label for="accept-terms">I agree to the <a href="#0">Terms</a></label>
-				</p>
-
-				<p class="cd-signin-modal__fieldset">
 					<input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding" type="submit" value="Create account">
 				</p>
 			</form>
@@ -1945,7 +1935,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<p class="cd-signin-modal__bottom-message js-signin-modal-trigger"><a href="#0" data-signin="login">Back to log-in</a></p>
 		</div> <!-- cd-signin-modal__block -->
 		
-		<a href="#0" class="cd-signin-modal__close js-close"> <i class="zmdi zmdi-close"></i> </a>
+		<a href="#0" class="cd-signin-modal__close js-close"> Close </a>
 	</div> <!-- cd-signin-modal__container -->
 </div> <!-- cd-signin-modal -->
 <!--signup modal-->
