--- a/admin-page.html
+++ b/admin-page.html
@@ -43,21 +43,21 @@
 			<div class="top-bar">
 				<div class="content-topbar flex-sb-m h-full container">
 					<div class="left-top-bar">
-						Free shipping for standard order over Rs.1000
+						
 					</div>
 
 					<div class="right-top-bar flex-w h-full">
 
-						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger" data-signin="login">
+						<!-- <a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger" data-signin="login">
 							Sign In
 						</a>
 
 						<a href="#" class="flex-c-m trans-04 p-lr-25">
 							Help & FAQs
-						</a>
+						</a> -->
 
 						<a href="#" class="flex-c-m trans-04 p-lr-25">
-							My Account
+							Admin Account
 						</a>
 
 					</div>
@@ -73,7 +73,7 @@
 					</a>
 
 					<!-- Menu desktop -->
-					<div class="menu-desktop">
+					<!-- <div class="menu-desktop">
 						<ul class="main-menu">
 							<li>
 								<a href="index.html">Home</a>
@@ -95,7 +95,7 @@
 								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
-					</div>	
+					</div>	 -->
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
